# Hunyuan3D-Part

./: install_xpart.sh  pyproject.toml
P3-SAM/: __init__.py  model.py
P3-SAM/demo/: __init__.py  app.py  auto_mask.py  auto_mask_no_postprocess.py  gradio_demo.py
P3-SAM/utils/: __init__.py
P3-SAM/utils/chamfer3D/: __init__.py
XPart/: gradio_demo.py
XPart/partgen/: __init__.py  gradio_app.py  partformer_pipeline.py
XPart/partgen/bbox_estimator/: __init__.py  auto_mask_api.py
XPart/partgen/models/: __init__.py
XPart/partgen/models/autoencoders/: attention_blocks.py  model.py
XPart/partgen/models/conditioner/: __init__.py
XPart/partgen/models/diffusion/: __init__.py
XPart/partgen/utils/: __init__.py  assembly.py  mesh_utils.py  misc.py
